--- a/index.html
+++ b/index.html
@@ -5,24 +5,156 @@
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>The Red is Routine Game</title>
 <style>
-  :root{--bg:#bfe9ff;--ground:#1f7a1f;--ui:#fff;--muted:#123}
-  html,body{height:100%;margin:0;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial;color:var(--muted)}
-  #wrap{display:flex;flex-direction:column;align-items:center;min-height:100vh;background:linear-gradient(#cdeeff,#a6dbff 60%);padding:8px;box-sizing:border-box}
-  canvas{width:100%;max-width:900px;height:56vh;border-radius:10px;background:transparent;display:block;touch-action:none}
-  header{width:100%;max-width:900px;display:flex;justify-content:space-between;align-items:center;margin-bottom:6px}
-  .left{display:flex;flex-direction:column}
-  .score{font-weight:700;font-size:16px}
-  .small{font-size:12px;color:#234}
-  .bigBtn{position:fixed;right:14px;bottom:18px;background:rgba(255,255,255,0.96);border-radius:40px;padding:14px 18px;font-weight:700;box-shadow:0 6px 18px rgba(10,10,10,0.12);z-index:30}
-  /* overlay fixed for stable mobile input */
-  #overlay{position:fixed;top:0;left:0;right:0;bottom:0;pointer-events:none;display:flex;align-items:center;justify-content:center;z-index:60;background:rgba(0,0,0,0);transition:background 160ms ease}
-  #overlay.show{pointer-events:auto;background:rgba(0,0,0,0.35)}
-  #menu{max-width:92%;box-sizing:border-box;background:var(--ui);padding:14px;border-radius:12px;box-shadow:0 10px 30px rgba(0,0,0,0.12);text-align:center}
-  .btn{padding:8px 10px;border-radius:8px;background:#f6f6f8;border:1px solid rgba(0,0,0,0.06);cursor:pointer;margin:6px}
-  footer{font-size:12px;color:#134;margin-top:8px}
-  input[type="text"]{padding:6px;border-radius:6px;border:1px solid #ccc}
-  @media(max-width:420px){.bigBtn{padding:12px 14px;right:10px;bottom:12px} canvas{height:52vh} #menu{font-size:16px;padding:12px} .btn{padding:12px 14px;font-size:15px} input[type="text"]{font-size:16px}}
-</style>
+    :root {
+      --bg: #bfe9ff;
+      --ground: #1f7a1f;
+      --ui: #fff;
+      --muted: #123;
+    }
+  
+    html,
+    body {
+      height: 100%;
+      margin: 0;
+      font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial;
+      color: var(--muted);
+    }
+  
+    #wrap {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      min-height: 100vh;
+      background: linear-gradient(#cdeeff, #a6dbff 60%);
+      padding: 8px;
+      box-sizing: border-box;
+    }
+  
+    canvas {
+      width: 100%;
+      max-width: 900px;
+      height: 56vh;
+      border-radius: 10px;
+      background: transparent;
+      display: block;
+      touch-action: none;
+    }
+  
+    header {
+      width: 100%;
+      max-width: 900px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 6px;
+    }
+  
+    .left {
+      display: flex;
+      flex-direction: column;
+    }
+  
+    .score {
+      font-weight: 700;
+      font-size: 16px;
+    }
+  
+    .small {
+      font-size: 12px;
+      color: #234;
+    }
+  
+    .bigBtn {
+      position: fixed;
+      right: 14px;
+      bottom: 18px;
+      background: rgba(255, 255, 255, 0.96);
+      border-radius: 40px;
+      padding: 14px 18px;
+      font-weight: 700;
+      box-shadow: 0 6px 18px rgba(10, 10, 10, 0.12);
+      z-index: 30;
+    }
+  
+    /* overlay fixed for stable mobile input */
+    #overlay {
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      pointer-events: none;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      z-index: 60;
+      background: rgba(0, 0, 0, 0);
+      transition: background 160ms ease;
+    }
+  
+    #overlay.show {
+      pointer-events: auto;
+      background: rgba(0, 0, 0, 0.35);
+    }
+  
+    #menu {
+      max-width: 92%;
+      box-sizing: border-box;
+      background: var(--ui);
+      padding: 14px;
+      border-radius: 12px;
+      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.12);
+      text-align: center;
+    }
+  
+    .btn {
+      padding: 8px 10px;
+      border-radius: 8px;
+      background: #f6f6f8;
+      border: 1px solid rgba(0, 0, 0, 0.06);
+      cursor: pointer;
+      margin: 6px;
+    }
+  
+    footer {
+      font-size: 12px;
+      color: #134;
+      margin-top: 8px;
+    }
+  
+    input[type="text"] {
+      padding: 6px;
+      border-radius: 6px;
+      border: 1px solid #ccc;
+    }
+  
+    @media (max-width: 420px) {
+      .bigBtn {
+        padding: 12px 14px;
+        right: 10px;
+        bottom: 12px;
+      }
+  
+      canvas {
+        height: 52vh;
+      }
+  
+      #menu {
+        font-size: 16px;
+        padding: 12px;
+      }
+  
+      .btn {
+        padding: 12px 14px;
+        font-size: 15px;
+      }
+  
+      input[type="text"] {
+        font-size: 16px;
+      }
+    }
+  </style>
+  
 </head>
 <body>
 <div id="wrap">
@@ -38,7 +170,7 @@
   <div id="overlay"></div>
 
   <button class="bigBtn" id="jumpBtn">JUMP</button>
-  <footer style="text-align:center;color:white">Tap anywhere or press JUMP • Jump to collect points • Avoid obstacles</footer>
+  <footer style="text-align:center;color:white">Tap anywhere on the game or press JUMP • Jump to collect points • Avoid obstacles</footer>
 </div>
 
 <script>
@@ -168,15 +300,43 @@
   function scheduleSpawn(now){ spawnAt = now + (SPAWN_MIN + Math.random()*(SPAWN_MAX-SPAWN_MIN)); }
 
   // Input (use passive:false for touchstart that preventDefault)
-  function doJump(){ if (STATE !== 'playing') return; if (player.onGround){ player.vy = JUMP_V; player.onGround = false; player.animTimer = 0; } }
+  function doJump(){ if (STATE !== 'playing') return; 
+  if (player.onGround){ 
+    player.vy = JUMP_V; player.onGround = false; 
+    player.animTimer = 0; 
+    } }
   canvas.addEventListener('pointerdown', e=>{ e.preventDefault(); doJump(); }, { passive: false });
   document.getElementById('jumpBtn').addEventListener('pointerdown', e=>{ e.preventDefault(); doJump(); }, { passive: false });
   canvas.addEventListener('touchstart', e=>{ e.preventDefault(); doJump(); }, { passive: false });
-  window.addEventListener('keydown', e=>{ if (e.key===' '||e.key==='Spacebar'){ if (STATE==='menu') startGame(); doJump(); e.preventDefault(); } if (e.key==='r'&&STATE==='over') startGame(); });
+  window.addEventListener('keydown', e=>{ 
+    if (e.key===' '||e.key==='Spacebar'){ 
+        if (STATE==='menu') startGame(); 
+        doJump(); 
+        e.preventDefault(); 
+    } 
+    if (e.key==='r'&&STATE==='over') startGame(); 
+});
 
   // Draw helpers
-  function roundRect(ctx,x,y,w,h,r){ ctx.beginPath(); ctx.moveTo(x+r,y); ctx.arcTo(x+w,y,x+w,y+h,r); ctx.arcTo(x+w,y+h,x,y+h,r); ctx.arcTo(x,y+h,x,y,r); ctx.arcTo(x,y,x+w,y,r); ctx.closePath(); }
-  function drawBall(ctx,x,y,rad){ ctx.fillStyle='#fff'; ctx.beginPath(); ctx.arc(x,y,rad,0,Math.PI*2); ctx.fill(); ctx.fillStyle='#000'; ctx.beginPath(); ctx.arc(x-4,y-2,2.5,0,Math.PI*2); ctx.fill(); ctx.beginPath(); ctx.arc(x+5,y+1,2.5,0,Math.PI*2); ctx.fill(); ctx.beginPath(); ctx.arc(x+1,y-6,2.2,0,Math.PI*2); ctx.fill(); }
+  function roundRect(ctx,x,y,w,h,r){ 
+    ctx.beginPath();
+    ctx.moveTo(x+r,y); 
+    ctx.arcTo(x+w,y,x+w,y+h,r); 
+    ctx.arcTo(x+w,y+h,x,y+h,r); 
+    ctx.arcTo(x,y+h,x,y,r); 
+    ctx.arcTo(x,y,x+w,y,r); ctx.closePath(); 
+}
+  function drawBall(ctx,x,y,rad){ 
+    ctx.fillStyle='#fff';
+    ctx.beginPath();
+    ctx.arc(x,y,rad,0,Math.PI*2);
+    ctx.fill(); ctx.fillStyle='#000';
+    ctx.beginPath(); ctx.arc(x-4,y-2,2.5,0,Math.PI*2);
+    ctx.fill(); ctx.beginPath();
+    ctx.arc(x+5,y+1,2.5,0,Math.PI*2); ctx.fill();
+    ctx.beginPath(); ctx.arc(x+1,y-6,2.2,0,Math.PI*2);
+    ctx.fill();
+}
 
   function drawBackground(ctx,W,H,dt,moving){
     // clear full pixel buffer first to avoid trails
@@ -184,7 +344,13 @@
 
     ctx.fillStyle = '#cfefff'; ctx.fillRect(0,0,W,H);
     ctx.fillStyle = 'rgba(255,255,255,0.9)';
-    clouds.forEach(c=>{ if (moving) c.x -= (worldSpeed*0.000002) * (c.s*100) * (dt/16); if (c.x < -120) c.x = W + 60; ctx.beginPath(); ctx.ellipse(c.x, c.y, 34*c.s, 18*c.s, 0,0,Math.PI*2); ctx.fill(); });
+    clouds.forEach(c=>{
+        if (moving) c.x -= (worldSpeed*0.000002) * (c.s*100) * (dt/16); 
+        if (c.x < -120) c.x = W + 60;
+        ctx.beginPath(); 
+        ctx.ellipse(c.x, c.y, 34*c.s, 18*c.s, 0,0,Math.PI*2);
+        ctx.fill(); 
+    });
 
     // draw stands (kept simple but full width)
     const standHeight = 120;
@@ -193,20 +359,23 @@
       if (moving) s.x -= (worldSpeed * 0.00045) * (dt/16) * 20;
       if (s.x < -s.w) s.x = s.w * (Math.ceil(W / s.w) + 1);
       const topY = standY - standHeight;
-      ctx.fillStyle = '#8B4513'; ctx.fillRect(s.x, topY, s.w, standHeight);
+      ctx.fillStyle = '#8B4513';
+      ctx.fillRect(s.x, topY, s.w, standHeight);
       ctx.fillStyle = '#A0522D';
       const steps = 5; const stepH = standHeight / steps; const stepW = s.w / steps;
       for (let i=0;i<steps;i++) ctx.fillRect(s.x + i*stepW, topY + i*stepH, stepW, stepH);
       ctx.fillStyle = '#A0522D';
       const seatRows=3, seatCols=6, seatW=(s.w/seatCols)-3, seatH=(standHeight/8);
-      for (let r=0;r<seatRows;r++) for (let c=0;c<seatCols;c++) ctx.fillRect(s.x + c*(seatW+3), topY + 10 + r*(seatH+6), seatW, seatH);
+      for (let r=0;r<seatRows;r++) 
+      for (let c=0;c<seatCols;c++) ctx.fillRect(s.x + c*(seatW+3), topY + 10 + r*(seatH+6), seatW, seatH);
     }
 
     // ground (ensure full width by using logical W)
     ctx.fillStyle = '#117a17';
     ctx.fillRect(0, H - 88, W, 88);
     ctx.strokeStyle = 'rgba(255,255,255,0.12)'; ctx.lineWidth = 2;
-    ctx.beginPath(); ctx.moveTo(0, H - 54); ctx.lineTo(W, H - 54); ctx.stroke();
+    ctx.beginPath(); ctx.moveTo(0, H - 54); ctx.lineTo(W, H - 54); 
+    ctx.stroke();
   }
 
   function drawObstacle(ctx,o){
@@ -214,16 +383,25 @@
     const map = { 'aunty':'aunty','shoes':'shoes','stain':'stain','dizzy':'dizzy','cramp':'stain','kit':'shoes','mud':'shoes' };
     const key = map[o.type] || o.type;
     const im = imgs[key];
-    if (im) ctx.drawImage(im, o.x, o.y, o.w, o.h); else { ctx.fillStyle='#7a1b1b'; roundRect(ctx, o.x, o.y, o.w, o.h, 6); ctx.fill(); }
+    if (im) ctx.drawImage(im, o.x, o.y, o.w, o.h);
+    else { ctx.fillStyle='#7a1b1b'; 
+        roundRect(ctx, o.x, o.y, o.w, o.h, 6); ctx.fill(); 
+    }
   }
 
   function drawPickup(ctx,p){
     if (!p.active) return;
-    if (p.kind === 'ball'){ const im = imgs['ball']; if (im) ctx.drawImage(im, p.x, p.y, p.w, p.h); else drawBall(ctx, p.x + p.w/2, p.y + p.h/2, 12); return; }
+    if (p.kind === 'ball'){ const im = imgs['ball'];
+    if (im) ctx.drawImage(im, p.x, p.y, p.w, p.h);
+    else drawBall(ctx, p.x + p.w/2, p.y + p.h/2, 12);
+    return;
+}
     const map = { coin:'coin', choc:'choc', pad:'pad', water:'water' };
     const im = imgs[ map[p.kind] || 'coin' ];
     if (im) ctx.drawImage(im, p.x, p.y, p.w, p.h);
-    else { ctx.fillStyle='#ffd700'; ctx.beginPath(); ctx.arc(p.x + p.w/2, p.y + p.h/2, 12, 0, Math.PI*2); ctx.fill(); }
+    else { ctx.fillStyle='#ffd700'; ctx.beginPath();
+    ctx.arc(p.x + p.w/2, p.y + p.h/2, 12, 0, Math.PI*2);
+    ctx.fill(); }
   }
 
   // rotating football in front of the player
@@ -234,24 +412,78 @@
     const centerX = player.x + 54;
     const centerY = player.y + player.h - 26;
     if (imgs['ball']){
-      ctx.save(); ctx.translate(centerX + size/2, centerY + size/2); ctx.rotate(footballAngle); ctx.drawImage(imgs['ball'], -size/2, -size/2, size, size); ctx.restore();
-    } else { ctx.save(); ctx.translate(centerX + size/2, centerY + size/2); ctx.rotate(footballAngle); drawBall(ctx, 0,0,12); ctx.restore(); }
+      ctx.save();
+      ctx.translate(centerX + size/2, centerY + size/2); 
+      ctx.rotate(footballAngle); 
+      ctx.drawImage(imgs['ball'], -size/2, -size/2, size, size); 
+      ctx.restore();
+    } else { 
+        ctx.save(); 
+        ctx.translate(centerX + size/2, centerY + size/2);
+        ctx.rotate(footballAngle);
+        drawBall(ctx, 0,0,12);
+        ctx.restore(); 
+    }
   }
 
   // draw player
   let fallUntil = 0;
-  function drawPlayer(ctx, now){
-    drawRotatingFootball(ctx, now);
-    const runA = imgs['girlRun1'], runB = imgs['girlRun2'], jump = imgs['girlJump'], fall = imgs['girlFall'];
-    const x = player.x, y = player.y, w = player.w, h = player.h;
-    if (STATE === 'hit'){ if (fall) ctx.drawImage(fall, x-8, y-8, w+16, h+16); else { ctx.fillStyle='#ffb3a7'; roundRect(ctx,x,y,w,h,10); ctx.fill(); } return; }
-    if (STATE === 'over' && imgs['girlFall']) { ctx.drawImage(imgs['girlFall'], x-8, y-8, w+16, h+16); return; }
-    if (!player.onGround && jump) { ctx.drawImage(jump, x-8, y-8, w+16, h+16); return; }
-    player.animTimer += 16; if (player.animTimer > 140){ player.runFlip = !player.runFlip; player.animTimer = 0; }
-    if (player.runFlip && runB) ctx.drawImage(runB, x-8, y-6, w+16, h+16);
-    else if (runA) ctx.drawImage(runA, x-8, y-6, w+16, h+16);
-    else { ctx.fillStyle='#1a3b7a'; roundRect(ctx,x,y,w,h,8); ctx.fill(); ctx.fillStyle='#ffdcb6'; ctx.beginPath(); ctx.arc(x+w/2,y-8,10,0,Math.PI*2); ctx.fill(); }
+  function drawPlayer(ctx, now) {
+  drawRotatingFootball(ctx, now);
+
+  const runA = imgs['girlRun1'];
+  const runB = imgs['girlRun2'];
+  const jump = imgs['girlJump'];
+  const fall = imgs['girlFall'];
+
+  const x = player.x;
+  const y = player.y;
+  const w = player.w;
+  const h = player.h;
+
+  if (STATE === 'hit') {
+    if (fall) {
+      ctx.drawImage(fall, x - 8, y - 8, w + 16, h + 16);
+    } else {
+      ctx.fillStyle = '#ffb3a7';
+      roundRect(ctx, x, y, w, h, 10);
+      ctx.fill();
+    }
+    return;
   }
+
+  if (STATE === 'over' && imgs['girlFall']) {
+    ctx.drawImage(imgs['girlFall'], x - 8, y - 8, w + 16, h + 16);
+    return;
+  }
+
+  if (!player.onGround && jump) {
+    ctx.drawImage(jump, x - 8, y - 8, w + 16, h + 16);
+    return;
+  }
+
+  player.animTimer += 16;
+  if (player.animTimer > 140) {
+    player.runFlip = !player.runFlip;
+    player.animTimer = 0;
+  }
+
+  if (player.runFlip && runB) {
+    ctx.drawImage(runB, x - 8, y - 6, w + 16, h + 16);
+  } else if (runA) {
+    ctx.drawImage(runA, x - 8, y - 6, w + 16, h + 16);
+  } else {
+    ctx.fillStyle = '#1a3b7a';
+    roundRect(ctx, x, y, w, h, 8);
+    ctx.fill();
+    
+    ctx.fillStyle = '#ffdcb6';
+    ctx.beginPath();
+    ctx.arc(x + w / 2, y - 8, 10, 0, Math.PI * 2);
+    ctx.fill();
+  }
+}
+
 
   // ---------- flow ----------
   function startGame(){
@@ -259,7 +491,8 @@
     lastTime = performance.now();
     worldSpeed = BASE_SPEED;
     distance = 0; itemCount = 0; points = 0;
-    obstacles.forEach(o=>o.active=false); pickups.forEach(p=>p.active=false);
+    obstacles.forEach(o=>o.active=false);
+    pickups.forEach(p=>p.active=false);
     initBg();
     scheduleSpawn(lastTime + 600);
     hideOverlay();
@@ -294,30 +527,29 @@
       </div>`;
     html += `<div style="font-size:14px;color:#444;margin-bottom:8px">"A menstrual health campaign by #NoFoulPlay"</div>`;
     html += `<div style="font-weight:700;margin-bottom:8px">Score: ${Math.floor(finalScore)}</div>`;
-    html += `<div style="display:flex;gap:8px;justify-content:center;margin-top:8px"><button style="background-color:#ff7f7f" class="btn" id="again">Play Again</button><button class="btn" id="home" style="background-color:#ff7f7f">Home</button></div></div>`;
+    html += `<div style="display:flex;gap:8px;justify-content:center;margin-top:8px">
+        <button style="background-color:#ff7f7f" class="btn" id="again">Play Again</button>
+        <button class="btn" id="home" style="background-color:#ff7f7f">Home</button>
+        </div></div>`;
 
     // show overlay (inserts HTML and toggles .show)
     showOverlay(html);
 
-    // safe attachment using document.getElementById
-    try {
-      const again = document.getElementById('again');
-      const home = document.getElementById('home');
+    // attach listeners after DOM is updated
+    queueMicrotask(() => {
+    const again = document.getElementById('again');
+    const home = document.getElementById('home');
 
-      if (again) {
-        again.addEventListener('click', () => {
-          try { hideOverlay(); startGame(); } catch(e){ console.error(e); }
-        }, { once: true });
-      } else console.warn('showGameOver: #again not found');
+    if (again) again.onclick = () => {
+        hideOverlay();
+        startGame();
+    };
 
-      if (home) {
-        home.addEventListener('click', () => {
-          try { hideOverlay(); showMenu(); } catch(e){ console.error(e); }
-        }, { once: true });
-      } else console.warn('showGameOver: #home not found');
-    } catch (attachErr) {
-      console.error('showGameOver attach error', attachErr);
-    }
+    if (home) home.onclick = () => {
+        showMenu();
+    };
+    });
+
 
   } catch (err) {
     console.error('showGameOver fatal error', err);
@@ -341,7 +573,11 @@
         player.vy += GRAVITY * dt/1000;
         player.y += player.vy * dt/1000;
         const H = canvas.height / PIXEL_RATIO;
-        if (player.y >= player.groundY){ player.y = player.groundY; player.vy = 0; player.onGround = true; }
+        if (player.y >= player.groundY){
+            player.y = player.groundY;
+            player.vy = 0;
+            player.onGround = true;
+        }
         const W = canvas.width / PIXEL_RATIO;
         drawBackground(ctx, W, H, dt, true);
         obstacles.forEach(o=> drawObstacle(ctx,o));
@@ -357,7 +593,11 @@
 
       player.vy += GRAVITY * dt/1000;
       player.y += player.vy * dt/1000;
-      if (player.y >= player.groundY){ player.y = player.groundY; player.vy = 0; player.onGround = true; }
+      if (player.y >= player.groundY){
+        player.y = player.groundY;
+        player.vy = 0;
+        player.onGround = true;
+    }
 
       if (now >= spawnAt){
         const r = Math.random();
@@ -386,7 +626,10 @@
           if (playerBottom <= obstacleTop + 8){
             // jumped over
           } else {
-            if (o.type === 'mud'){ o.active = false; points = Math.max(0, points - MUD_PEN); }
+            if (o.type === 'mud'){
+                o.active = false;
+                points = Math.max(0, points - MUD_PEN);
+            }
             else { triggerHit(now); return; }
           }
         }
